--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "env": "^0.0.2",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1"
@@ -27,8 +27,8 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "tailwindcss": "^4",
