--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.18",
     "env": "^0.0.2",
     "lucide-react": "^0.541.0",
     "next": "14.2.5",
